feature(css): support image auto dark

--- a/docs/en/.vitepress/theme/custom.css
+++ b/docs/en/.vitepress/theme/custom.css
@@ -15,6 +15,10 @@
   --vp-code-copy-code-hover-bg: rgba(255, 255, 255, 0.05);
 }
 
+.dark img.auto-dark-img {
+  filter: invert(1) hue-rotate(180deg);
+}
+
 .vp-doc [class*='language-'] > span.lang {
   color: var(--vp-c-text-3);
 }
